@@ -29,8 +29,14 @@
     msg: "RHEL or CentOS major version should >= 7"
 
 - name: Getting CPU virtualization parameters
-  shell: "/usr/bin/egrep -o '(vmx|svm)' /proc/cpuinfo | /usr/bin/sort | /usr/bin/uniq"
+  shell: |
+    set -o pipefail
+    /usr/bin/egrep -o '(vmx|svm)' /proc/cpuinfo | /usr/bin/sort | /usr/bin/uniq
+  args:
+    executable: /bin/bash
   register: is_virt_capable
+  changed_when: is_virt_capable.rc != 0
+  # NOTE: pipefail and changed_when were added to address ansible-lint errors
 
 
 - name: Checking if hardware virtualization has been turned on
