@@ -1,3 +1,6 @@
+* Monday January 24, 2022
+- Fixed ansible-lint issues
+
 * Wednesday August 18, 2021
 - Added feature to add, modify and delete libvirt network
 - Updated the documentation
